test/semantic_errors/invalid_declaration1.mc
void main() {
    int a;
    bool b = a; /* assignment of int to a bool */
}